--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ python = "^3.8"
 requests = "^2.32.3"
 robotframework = ">=6.0,<9.0"
 
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.3.3"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
